--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ img {
 .conteudo {
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 .rodape {
@@ -34,6 +35,7 @@ img {
 .rodape p {
     font-family: Roboto, sans-serif;
     text-align: center;
+    font-size: 13px;
 }
 
 a {
@@ -44,4 +46,26 @@ a {
     display: flex;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+}
+
+span {
+    padding: 0px 5px;
+}
+
+.paragrafo {
+    color: white;
+    text-align: center;
+    margin-top: 30px;
+    font-family: Roboto, 'Roboto';
+    font-size: 14px;
+}
+
+.icones {
+    display: flex;
+    justify-content: center;
+}
+
+.icones img {
+    width: 30px;
 }
